# LangChain-Travel-Research-Assistant

./: .gitignore  README.md  pyproject.toml
travel-rag/: app.py  models.py
travel-rag/data/: bengaluru.txt  mumbai.txt
